[package]
name            = "flo_binding"
version         = "2.0.1"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
edition         = "2018"
repository      = "https://github.com/Logicalshift/flowbetween"
documentation   = "http://docs.rs/flo_binding/"
description     = "Declarative binding library for Rust"
readme          = "README.md"

keywords        = ["reactive", "parametric", "binding", "event"]
categories      = ["algorithms","asynchronous","data-structures","gui"]

[dependencies]
desync          = "0.7"
futures         = "0.3"
flo_rope        = "0.1"
flo_stream      = "0.4"
