[package]
name            = "flo_binding"
version         = "2.1.0"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
edition         = "2018"
repository      = "https://github.com/Logicalshift/flo_binding"
documentation   = "http://docs.rs/flo_binding/"
description     = "Declarative binding library for Rust"
readme          = "README.md"

keywords        = ["reactive", "parametric", "binding", "event"]
categories      = ["algorithms","asynchronous","data-structures","gui"]

[features]
default         = ["stream"]
stream          = ["desync", "futures", "flo_rope" ]

[dependencies]
desync          = { version = "0.7", optional = true }
futures         = { version = "0.3", optional = true }
flo_rope        = { version = "0.1", optional = true }
