[package]
name            = "flo_binding"
version         = "2.2.0"
authors         = ["Andrew Hunter"]
license         = "Apache-2.0"
edition         = "2018"
repository      = "https://github.com/Logicalshift/flo_binding"
documentation   = "http://docs.rs/flo_binding/"
description     = "Declarative binding library for Rust"
readme          = "README.md"

keywords        = ["reactive", "parametric", "binding", "event"]
categories      = ["algorithms","asynchronous","data-structures","gui"]

[features]
default         = [ "stream", "rope", "diff" ]
stream          = [ "desync", "futures" ]
rope            = [ "desync", "futures", "flo_rope" ]
diff            = [ "similar" ]

[dependencies]
desync          = { version = "0.8", optional = true }
futures         = { version = "0.3", optional = true }
flo_rope        = { version = "0.2", optional = true }
similar         = { version = "2.1", optional = true }
